# apexsignal-f1

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  DATA_DICTIONARY.md  DECISIONS.md  Dockerfile  LICENSE  MODEL_CARD.md  Makefile  README.md  REFERENCES.md  RISK_DISCLOSURE.md  ROADMAP.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml  refresh_demo_data.yml  security.yml
.streamlit/: config.toml
artifacts/reports/: evaluation_latest.json  next_race_prediction.json
configs/: base.yaml  development.yaml  event_impact_priors.yaml  news_sources.yaml  portfolio_demo.yaml  risk_limits.yaml
dashboard/: _bootstrap.py  app.py  theme.py
data/: README.md
data/fixtures/: README.md
data/fixtures/demo_race/: events.json
data/fixtures/news/: documents.json
data/fixtures/real_race/: events.jsonl
deploy/: PORTFOLIO_EMBED.md
docs/: BUILD_SPEC.md
scripts/: bootstrap.py  build_features.py  download_history.py  generate_demo_assets.py  predict_next.py  predict_recent.py  price_race.py  refresh_markets.py  refresh_news.py  replay_race.py  run_backtest.py  train_models.py
src/apexsignal/: __init__.py  logging.py  settings.py
src/apexsignal/allocation/: __init__.py  constraints.py  kelly.py  optimizer.py  stress_tests.py
src/apexsignal/api/: __init__.py  main.py
src/apexsignal/backtesting/: __init__.py  baselines.py  evaluation.py  metrics.py
src/apexsignal/domain/: __init__.py  contracts.py  events.py  markets.py  news.py  provenance.py  race_state.py
src/apexsignal/execution/: __init__.py  base.py  kalshi_demo.py  paper.py  synthetic.py
src/apexsignal/features/: __init__.py
src/apexsignal/ingestion/: __init__.py  fastf1_adapter.py  fixtures_adapter.py  kalshi_adapter.py  normalization.py  polymarket_adapter.py  synthetic_market.py
src/apexsignal/intelligence/: __init__.py  contradiction.py  deduplication.py  entity_resolution.py  event_extractor.py  event_impact.py  event_ontology.py  (+4 more)
tests/integration/: test_fastf1_adapter.py  test_pricing_real.py
tests/leakage/: test_provenance.py  test_walk_forward_leakage.py
tests/unit/: test_allocation.py  test_api.py  test_calibration.py  test_domain_events.py  test_evaluation.py  test_evaluation_report.py  test_event_extraction.py  test_event_impact.py  test_event_store.py  test_fixture_bundle.py  test_hazards.py  test_latent_pace.py  test_markets.py  test_metrics.py  test_news_pipeline.py  test_prerace_baselines.py  test_pricing_service.py  test_quality_checks.py  test_race_service.py  test_race_state.py  test_ranking.py  test_ratings.py  test_scenarios.py  test_settings.py  test_simulation.py
(+31 files in other folders)
