[project]
name = "apexsignal-f1"
version = "0.1.0"
description = "Event-driven Formula 1 prediction-market pricing and paper-trading research platform"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "ApexSignal F1" }]

# Core dependencies: kept intentionally small so Phase 0 / CI installs fast.
# Heavier stacks (ML, data, api, dashboard) live in optional-dependency groups
# and are pulled in during the phase that first needs them.
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.1",
    "polars>=1.0",
    "numpy>=1.26",
    "python-dateutil>=2.9",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
data = [
    "fastf1>=3.3",
    "pandas>=2.2",
    "pyarrow>=16.0",
    "duckdb>=1.0",
    "sqlmodel>=0.0.21",
]
models = [
    "scikit-learn>=1.5",
    "lightgbm>=4.3",
    "statsmodels>=0.14",
    "lifelines>=0.29",
    "scipy>=1.13",
]
api = [
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "websockets>=12.0",
    "tenacity>=8.4",
]
dashboard = [
    "streamlit>=1.36",
    "plotly>=5.22",
]
sim = [
    "numba>=0.60",
    "scipy>=1.13",
]

[dependency-groups]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "pre-commit>=3.7",
    "bandit>=1.7",
    "pip-audit>=2.7",
    "types-python-dateutil",
    "types-pyyaml",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/apexsignal"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "scripts", "dashboard"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "C4", "PTH", "RUF"]
ignore = ["N999"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.mypy]
python_version = "3.12"
packages = ["apexsignal"]
mypy_path = "src"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["fastf1.*", "pandas", "pandas.*", "lightgbm.*", "lifelines.*", "statsmodels.*", "duckdb.*", "plotly.*", "streamlit.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers"
testpaths = ["tests"]
markers = [
    "integration: tests that exercise adapters against mocked external services",
    "leakage: point-in-time / no-future-data invariants",
    "slow: long-running tests excluded from the fast CI lane",
]

[tool.coverage.run]
source = ["src/apexsignal"]
branch = true

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
